To show what i'm doing

--- a/ReviewYourMovie/Client/Pages/FetchData.razor
+++ b/ReviewYourMovie/Client/Pages/FetchData.razor
@@ -41,6 +41,6 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
+        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("api/WeatherForecast");
     }
 }
