--- a/ReviewYourMovie/Client/Pages/Index.razor
+++ b/ReviewYourMovie/Client/Pages/Index.razor
@@ -1,18 +1,17 @@
 ﻿@page "/"
 
+<PageTitle>Review Your Movie Service</PageTitle>
 
-<PageTitle>Index</PageTitle>
-
-<h1>Hello, world!</h1>
+<h1>Hello</h1>
 
 Welcome to your new app.
+
+How are You?
 
 <SurveyPrompt Title="How is Blazor working for you?" />
 
 @code {
 
-	DiscoverMovie movie;
-	string errorString;
 
 
 }
