--- a/ReviewYourMovie/Client/_Imports.razor
+++ b/ReviewYourMovie/Client/_Imports.razor
@@ -9,3 +9,6 @@
 @using ReviewYourMovie.Client
 @using ReviewYourMovie.Client.Shared
 @using ReviewYourMovie.Shared
+@using Microsoft.AspNetCore.Components.Authorization;
+@using Microsoft.AspNetCore.Authorization;
+@using Blazored.LocalStorage;
