--- a/ReviewYourMovie/Client/Pages/Counter.razor
+++ b/ReviewYourMovie/Client/Pages/Counter.razor
@@ -8,11 +8,22 @@
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
-@code {
-    private int currentCount = 0;
+<p></p>
 
-    private void IncrementCount()
-    {
-        currentCount++;
-    }
+<AuthorizeView>
+	<Authorized>
+		<span>You are authorized as @context.User.Identity.Name</span>
+	</Authorized>
+	<NotAuthorized>
+		<span>You are not authorized man.</span>
+	</NotAuthorized>
+</AuthorizeView>
+
+@code {
+	private int currentCount = 0;
+
+	private void IncrementCount()
+	{
+		currentCount++;
+	}
 }
