--- a/ReviewYourMovie/Client/_Imports.razor
+++ b/ReviewYourMovie/Client/_Imports.razor
@@ -9,6 +9,8 @@
 @using ReviewYourMovie.Client
 @using ReviewYourMovie.Client.Shared
 @using ReviewYourMovie.Shared
+@using ReviewYourMovie.Shared.Models
 @using Microsoft.AspNetCore.Components.Authorization;
 @using Microsoft.AspNetCore.Authorization;
 @using Blazored.LocalStorage;
+@using Newtonsoft.Json;
