--- a/ReviewYourMovie/Client/Pages/Counter.razor
+++ b/ReviewYourMovie/Client/Pages/Counter.razor
@@ -12,7 +12,7 @@
 
 <AuthorizeView>
 	<Authorized>
-		<span>You are authorized as @context.User.Identity.Name</span>
+		<span>You are authorized as @context.User.Identity.IsAuthenticated @*@context.User.Identity.Name*@</span>
 	</Authorized>
 	<NotAuthorized>
 		<span>You are not authorized man.</span>
