--- a/ReviewYourMovie/Client/Pages/MovieDetailsPage.razor
+++ b/ReviewYourMovie/Client/Pages/MovieDetailsPage.razor
@@ -1,4 +1,5 @@
-﻿@page "/MovieDetailsPage"
+﻿@page "/MovieDetailsPage/{id}"
+@inject HttpClient Http
 
 <h3>MovieDetailsPage</h3>
 
@@ -11,7 +12,6 @@
 else
 {
 	<div class="row">
-		
 			<div class="col-sm-2">
 				<div class="card text-center" style="width: 16rem;">
 					<img src="@posterPath/@movie.Poster_path" class="card-img-top" alt="@movie.Title">
@@ -22,29 +22,33 @@ else
 					</div>
 				</div>
 			</div>
-		
 	</div>
+
+
 }
 
 @code {
+	[Parameter]
+	public string id { get; set; }
 
 	private MovieDetails movie;
-
-	private HttpClient Http = new();
 
 	private string posterPath = "https://image.tmdb.org/t/p/original";
 
 	private static string requestUri = "https://localhost:44386/api/MovieDetails/id";
 
+	protected override async Task OnInitializedAsync()
+	{
+		ShowDetails();
+	}
 
-
-	public async void GetId(int id)
+	public async void ShowDetails()
 	{
 		var response = await Http.PostAsJsonAsync(requestUri, id);
 
 		movie = await response.Content.ReadFromJsonAsync<MovieDetails>();
 
-		//StateHasChanged();
+		StateHasChanged();
 	}
 
 }
