--- a/ReviewYourMovie/Client/Shared/LoginComponent.razor
+++ b/ReviewYourMovie/Client/Shared/LoginComponent.razor
@@ -7,7 +7,7 @@
 @inject NavigationManager Manager
 
 
-<div class="card d-flex justify-content-center">
+<div class="card col-lg-2 col-md-3 col-sm-4 d-flex justify-content-center">
 	<h4 class="card-header">Login</h4>
 	<div class="card-body">
 		<EditForm Model="@user" OnValidSubmit="OnValidSubmit">
