--- a/ReviewYourMovie/Client/Shared/MainLayout.razor.css
+++ b/ReviewYourMovie/Client/Shared/MainLayout.razor.css
@@ -9,7 +9,7 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background: linear-gradient(180deg, #2a4858 0%, #007f7d 150%);
 }
 
 .top-row {
