--- a/ReviewYourMovie/Client/Pages/MovieDetailsPage.razor
+++ b/ReviewYourMovie/Client/Pages/MovieDetailsPage.razor
@@ -64,7 +64,7 @@ else
 						<NotAuthorized>
 							<h3>Please, log in to add a review.</h3>
 							<div class="end-50">
-								<LoginComponent></LoginComponent>
+								<Login></Login>
 							</div>
 						</NotAuthorized>
 					</AuthorizeView>
