--- a/ReviewYourMovie/Client/Pages/Login.razor
+++ b/ReviewYourMovie/Client/Pages/Login.razor
@@ -8,7 +8,7 @@
 @inject NavigationManager Manager
 
 
-<div class="card col-lg-3 col-md-4 col-sm-5">
+<div class="card d-flex justify-content-center">
 	<h4 class="card-header">Login</h4>
 	<div class="card-body">
 		<EditForm Model="@user" OnValidSubmit="OnValidSubmit">
@@ -48,7 +48,6 @@
 			await LocalStorage.SetItemAsync("token", value);
 			await AuthStateProvider.GetAuthenticationStateAsync();
 			await JSRuntime.InvokeVoidAsync("alert", "Logged succesfully");
-			//Manager.NavigateTo("/");
 		}
 		else
 		{
