App after changes for Deploy

--- a/ReviewYourMovie/Client/Pages/Index.razor
+++ b/ReviewYourMovie/Client/Pages/Index.razor
@@ -63,7 +63,7 @@ else
 
 	private string posterPath = "https://image.tmdb.org/t/p/original";
 
-	private string requestUri = "https://localhost:44386/api/DiscoverMovies";
+	private string requestUri = "api/DiscoverMovies";
 
 	private int pageRequest = 1;
 
@@ -78,8 +78,6 @@ else
 			DiscoverMovies();
 		}
 	}
-
-
 
 	private void SetButtonsState()
 	{
