--- a/ReviewYourMovie/Client/Pages/Register.razor
+++ b/ReviewYourMovie/Client/Pages/Register.razor
@@ -39,7 +39,7 @@
 
     private async void OnValidSubmit()
     {
-        var result = await Http.PostAsJsonAsync("https://localhost:44386/api/Token/register", user);
+        var result = await Http.PostAsJsonAsync("api/Token/register", user);
         var response = await result.Content.ReadAsStringAsync();
 
         var error = JObject.Parse(response);
